force-app/main/default/objects/AI_Workspace_Processing_Policy__c/AI_Workspace_Processing_Policy__c.object-meta.xml
<CustomObject>
    <label>Workspace Processing Policy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workspace Processing Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>