force-app/main/default/objects/AI_Workspace_Processing_Policy__c/fields/Profiles__c.field-meta.xml
<CustomField>
    <fullName>Profiles__c</fullName>
    <description>Stores profile information for workspace processing</description>
    <label>Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>