force-app/main/default/objects/AI_Workspace_Processing_Policy__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description>Stores user information for workspace processing</description>
    <label>Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>